fix inconsistencies in div spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@ img {
 .Aboutme {
   width: 100%;
   float: left;
-  background-color:rgb(95, 172, 22);
   border: solid black;
   border-width: 5px;
   margin: 20px;
@@ -23,7 +22,6 @@ img {
 .column1 {
   width: 300px;
   float: left;
-  background-color:rgb(172, 22, 22);
   border: solid black;
   border-width: 5px;
   margin: 20px;
@@ -33,16 +31,15 @@ img {
   border-radius: 15px;
   }  
 
-  .column2 {
-    width: 300px;
-    float: right;
-    background-color:rgb(213, 236, 63);
-    border: solid black;
-    border-width: 5px;
-    margin: 20px;
-    box-sizing: border-box;
-    padding: 10px;
-    height: 400px;
-    border-radius: 15px;
-  
-  }
+.column2 {
+  width: 300px;
+  float: right;
+  border: solid black;
+  border-width: 5px;
+  margin: 20px;
+  box-sizing: border-box;
+  padding: 10px;
+  height: 400px;
+  border-radius: 15px;
+
+}
